# docs/swagger.json
@@ -38,6 +38,32 @@
                 }
             }
         },
+        "/banks/beeline/config": {
+            "get": {
+                "description": "Returns Beeline config.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "beeline config"
+                ],
+                "summary": "Get Beeline config",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_modules_banks_beeline_transport_http.ConfigResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/http.BeelineErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/banks/rocketbank/config": {
             "get": {
                 "description": "Returns Rocketbank config.",
@@ -52,7 +78,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/http.ConfigResponse"
+                            "$ref": "#/definitions/internal_modules_banks_rocketbank_transport_http.ConfigResponse"
                         }
                     },
                     "500": {
@@ -92,7 +118,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/http.ConfigResponse"
+                            "$ref": "#/definitions/internal_modules_banks_rocketbank_transport_http.ConfigResponse"
                         }
                     },
                     "400": {
@@ -138,7 +164,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/http.ConfigResponse"
+                            "$ref": "#/definitions/internal_modules_banks_rocketbank_transport_http.ConfigResponse"
                         }
                     },
                     "400": {
@@ -758,6 +784,14 @@
                 }
             }
         },
+        "http.BeelineErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
         "http.CardTransferRequest": {
             "type": "object",
             "required": [
@@ -846,29 +880,6 @@
                     "type": "string"
                 },
                 "phoneNumber": {
-                    "type": "string"
-                }
-            }
-        },
-        "http.ConfigResponse": {
-            "type": "object",
-            "properties": {
-                "balance": {
-                    "type": "number"
-                },
-                "clientInfo": {
-                    "$ref": "#/definitions/http.ClientInfoResponse"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "history": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/http.HistoryResponse"
-                    }
-                },
-                "updatedAt": {
                     "type": "string"
                 }
             }
@@ -1266,6 +1277,40 @@
                 },
                 "role": {
                     "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_modules_banks_beeline_transport_http.ConfigResponse": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_modules_banks_rocketbank_transport_http.ConfigResponse": {
+            "type": "object",
+            "properties": {
+                "balance": {
+                    "type": "number"
+                },
+                "clientInfo": {
+                    "$ref": "#/definitions/http.ClientInfoResponse"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "history": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/http.HistoryResponse"
+                    }
                 },
                 "updatedAt": {
                     "type": "string"
