# internal/modules/banks/beeline/transport/http/responses.go
@@ -1,0 +1,12 @@
+package http
+
+import "time"
+
+type ConfigResponse struct {
+	CreatedAt time.Time `json:"createdAt"`
+	UpdatedAt time.Time `json:"updatedAt"`
+}
+
+type BeelineErrorResponse struct {
+	Error string `json:"error"`
+}
